objects/AssociatedLocation.object
<CustomObject>
    <fields>
        <fullName>Active_Address__c</fullName>
        <formula>ISNULL(ActiveTo)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To deactivate the address, please populate &apos;Active To&apos;</inlineHelpText>
        <label>Active Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Subtype__c</fullName>
        <label>Address Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>holding_lot</fullName>
                    <label>Holding Lot</label>
                </value>
                <value>
                    <fullName>residential</fullName>
                    <label>Residential</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>After_hour_deliveries_allowed__c</fullName>
        <label>After hour deliveries allowed?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Address_Name__c</fullName>
        <description>Provides an alternative Address name for the associated location</description>
        <inlineHelpText>This Location Name will show on the release slip instead of Dealer Name if this address is selected for Transportation</inlineHelpText>
        <label>Alternate Address Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Location_Guid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique Guid of this associated location</description>
        <externalId>true</externalId>
        <label>Associated Location Guid</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Auto_Inc_Id__c</fullName>
        <description>Auto Increment Id used to generate Org address Ids</description>
        <label>Auto Inc Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>From_Historical_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this record was created through a historical load</description>
        <label>From Historical Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Location_Address__c</fullName>
        <description>This is the entire address</description>
        <formula>Location.VisitorAddress.Street &amp;&quot; &quot;&amp;  Location.VisitorAddress.City &amp;&quot;, &quot;&amp; Location.VisitorAddress.State &amp;&quot; &quot;&amp; Location.VisitorAddress.PostalCode &amp;&quot; &quot;&amp; Location.VisitorAddress.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inherited_Address_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will populate when an address is being changed (ie: old associatedLocation is being de-activated and Org Address ID/guid is being transferred) creating a NEW associatedLocation with the org Address ID/guid of the old associatedLocation</description>
        <label>Inherited Address Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monday_Friday_End_Time__c</fullName>
        <label>Monday Friday End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_Friday_Start_Time__c</fullName>
        <label>Monday-Friday Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes related to the relationship between this Account and the Address association</description>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Address_Guid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique Guid associated with an Organization and an address, along with the unique address type</description>
        <externalId>true</externalId>
        <label>Organization Address Guid</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organization_Address_Id__c</fullName>
        <description>This field is the unique Id between the Organizaition and the Address associated with it, along with the unique Address type</description>
        <externalId>true</externalId>
        <label>Organization Address Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Saturday_End_Time__c</fullName>
        <label>Saturday End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Saturday_Start_Time__c</fullName>
        <label>Saturday Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday_End_Time__c</fullName>
        <label>Sunday End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sunday_Start_Time__c</fullName>
        <label>Sunday Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>eastern</fullName>
                    <label>Eastern Time</label>
                </value>
                <value>
                    <fullName>central</fullName>
                    <label>Central Time</label>
                </value>
                <value>
                    <fullName>mountain</fullName>
                    <label>Mountain Time</label>
                </value>
                <value>
                    <fullName>pacific</fullName>
                    <label>Pacific Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transportation_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transportation Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associated Locations</relationshipLabel>
        <relationshipName>Associated_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Location_Ref</fullName>
        <active>true</active>
        <description>After an associated Location&apos;s Location is created it cannot be changed</description>
        <errorConditionFormula>IsChanged(LocationId)</errorConditionFormula>
        <errorMessage>Cannot Change Location after Associated Location has been updated. Please de-activate this Associated Location and Create a new one</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Change_Type</fullName>
        <active>true</active>
        <description>Associated Location Type cannot be changed</description>
        <errorConditionFormula>IsChanged(Type)</errorConditionFormula>
        <errorMessage>Type cannot be changed. Please De-activate this Address if it is no longer valid and recreate a new address with the correct type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Delete_ActiveTo</fullName>
        <active>true</active>
        <description>After an associated Location&apos;s Active To is filled, it cannot be deleted.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISCHANGED(ActiveTo), 
ISNULL(ActiveTo),
NOT(ISNULL(PRIORVALUE(ActiveTo))))</errorConditionFormula>
        <errorMessage>Cannot Delete Active To after Associated Location has been updated. To reactivate the address, Please create a new one</errorMessage>
    </validationRules>
</CustomObject>